Fix the issue that admin bar is not showing on location map window.

--- a/wp-content/plugins/store-locator-le/css/clomap.css
+++ b/wp-content/plugins/store-locator-le/css/clomap.css
@@ -42,8 +42,8 @@ div#sl_rightcol {
     width: 100%;
 }
 
-html #wpadminbar{
-   display:none;	
+.page-template-locationmap #wpadminbar{
+   display:none;
 }
 /*---------------------
  * Map
